i have added third section knowledge image

--- a/index.html
+++ b/index.html
@@ -141,6 +141,56 @@
             </div>
         </section>
 
+        <div class="main-parent">
+            <div class="main-container">
+
+                <img id="know-img" src="./assets/knowledge.png" alt=""> <br>
+
+
+
+                <div class="list">
+                    <span class="solution">THE SOLUTION</span><br><br>
+
+                    <h1 class="your-sec">Your second brain,
+                        structured by design.</h1><br>
+
+                    <p class="personal">Personal Knowledge Vault isn't another note-taking app. z<br>It's a thinking
+                        environment where
+                        every
+                        note, link, and summary<br>becomes part of an interconnected web of understanding.</p> <br><br>
+
+                    <div class="all-list">
+
+                        <ul>
+                            <li> <img src="./assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from
+                                day one</li>
+
+                            <li> <img src="./assets/CheckCircle.png" alt=""> Connect related concepts automatically as
+                                you write</li>
+
+                            <li> <img src="./assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection
+                                prompts</li>
+
+                            <li> <img src="./assets/CheckCircle.png" alt=""> Find anything instantly with semantic
+                                search</li>
+                        </ul>
+
+                    </div>
+
+
+                </div>
+
+
+
+
+
+
+
+            </div>
+
+
+        </div>
+
 
     </main>
 
